<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    app:cardCornerRadius="@dimen/marginStd">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginStd"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_movie_card_pager_konten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginStd"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtJudul_movie_list_pager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ini_judul_hint"
                android:textSize="20sp"
                android:layout_marginBottom="@dimen/marginStd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDeskripsi_movie_list_pager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ini_deskripsi_hint"
                android:layout_marginBottom="5dp"
                android:maxLines="3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTanggal_rilis_movie_list_pager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ini_tanggal_rilis_hint"
                android:layout_marginBottom="@dimen/marginStd"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="bottom"
                android:layout_gravity="bottom|center_horizontal">

                <Button
                    android:id="@+id/button_detail_movie_pager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/bg_color_button_unguMuda"
                    android:text="@string/detail"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button_share_movie_pager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marginStd"
                    android:layout_marginTop="5dp"
                    android:background="@color/bg_color_button_unguMuda"
                    android:text="@string/share"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>